--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,8 @@
 
 body {
 	background: #F2F2F2;
-	font-family: 'Avenir';
-	font-size: 18px;
+	font-family: 'avenir';
+	font-size: 28px;
 	font-weight: 400;
 	padding: 0;
 	margin: 0;
@@ -13,7 +13,7 @@ body {
 
 .header {
 	background: #FFF;
-	padding: 20px;
+	padding: 18px;
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
@@ -31,4 +31,21 @@ h1 {
 	padding-left: 20px;
 	padding-right: 20px;
 	margin: 0 auto;
+}
+
+h2 {
+	background: #F2F2F2;
+	font-family: 'avenir';
+	font-size: 18px;
+	font-weight: 400;
+	padding: 0;
+	margin: 0;
+}
+
+blockquote {
+	font-family: 'libre baskerville';
+	font-size: 28px;
+	font-weight: 500;
+	font-style: italic;
+	margin: 0;
 }
