--- a/static/style.css
+++ b/static/style.css
@@ -5,14 +5,14 @@
 body {
 	background: #F2F2F2;
 	font-family: 'avenir';
-	font-size: 28px;
-	font-weight: 400;
-	padding: 0;
+	font-size: 16px;
+	font-weight: 100;
+	padding: 0px;
 	margin: 0;
 }
 
 .header {
-	background: #FFF;
+	background: #4deec6;
 	padding: 18px;
 	display: flex;
 	width: 100%;
@@ -22,7 +22,7 @@ body {
 }
 
 h1 {
-	color: red;
+	color: rgb(135, 57, 146);
 	margin: 0;
 }
 
