--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,16 +1,19 @@
-{{ partial "header.html" . }}
-
-<div>
-{{ range .Pages }}
-	<article>
-		<h2>
-			<a href="{{ .URL }}">
-				{{ .Title }}
-			</a>
-		</h2>
-		<hr>
-	</article>
+{{ define "main" }}
+<main>
+    <article>
+        <header>
+            <h1>{{.Title}}</h1>
+        </header>
+        <!-- "{{.Content}}" pulls from the markdown content of the corresponding _index.md -->
+        {{.Content}}
+    </article>
+    <ul>
+    <!-- Ranges through content/post/*.md -->
+    {{ range .Pages }}
+        <li>
+            <a href="{{.Permalink}}">{{.Date.Format "2006-01-02"}} | {{.Title}}</a>
+        </li>
+    {{ end }}
+    </ul>
+</main>
 {{ end }}
-</div>
-
-{{ partial "footer.html" . }}
