--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,6 +9,7 @@
 			<nav>
 				<a href="/">Home</a>
 				<a href="/blog/">Blog</a>
+				<a href="/work/">Work</a>
 			</nav>
 		</header>
 		<main class="main">
